--- a/portfolio_ideta/works_hp_detail.html
+++ b/portfolio_ideta/works_hp_detail.html
@@ -14,8 +14,9 @@
     <link rel="stylesheet" href="./css/works_hp_detail.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <!-- CDN gsap 横から縦スクロール -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.5/ScrollTrigger.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/ScrollTrigger.min.js"></script>
 
     <script>
         (function (d) {
@@ -82,7 +83,7 @@
     <div class="bg"></div>
     <main data-scroll-container>
         <section data-scroll-section class="scroll_section">
-            <div class="pc_top wrapper">
+            <div class="pc_top wrapper section-inner">
                 <div class="container">
                     <div class="ttl">
                         <h1>カフェサイト（架空）</h1>
@@ -99,7 +100,7 @@
         </section>
 
         <section data-scroll-section class="scroll_section second_section">
-            <div class="sp_container">
+            <div class="sp_container section-inner">
                 <div class="inner">
                     <div class="sp_top">
                         <div class="container">
@@ -116,7 +117,7 @@
                         </div>
                     </div>
 
-                    <div class="contents wrapper">
+                    <div class="contents wrapper bottom-txt">
                         <div class="sp_ttl">
                             <h1>カフェサイト（架空）</h1>
                         </div>
@@ -187,7 +188,7 @@
         </section>
 
         <section data-scroll-section class="scroll_section">
-            <div class="pc_all">
+            <div class="pc_all section-inner">
                 <div class="allpage">
                     <p class="en">ALL PAGES</p>
                     <div class="a">
@@ -233,40 +234,41 @@
             </div>
         </section>
 
-        <section data-scroll-section class="scroll_section forth_section">
-            <div class="sp_all sliders_wrapper">
-                <!-- <div class="allpage"> -->
-                <p class="en slide">ALL PAGES</p>
-                <div class="images_top slide">
-                    <img src="./images/hp_cafe_all_1.jpg" alt="">
-                </div>
-                <div class="images slide">
-                    <div class="images_left">
-                        <div>
-                            <img src="./images/hp_cafe_all_2.jpg" alt="">
+        <section data-scroll-section class="scroll_section forth_section verticalscrolling">
+            <div class="sp_all sliders_wrapper section-inner">
+                <div class="sp_allpage">
+                    <p class="en slide">ALL PAGES</p>
+                    <div class="images_top slide">
+                        <img src="./images/hp_cafe_all_1.jpg" alt="">
+                    </div>
+                    <div class="images slide">
+                        <div class="images_left">
+                            <div>
+                                <img src="./images/hp_cafe_all_2.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./images/hp_cafe_all_3.jpg" alt="">
+                            </div>
                         </div>
-                        <div>
-                            <img src="./images/hp_cafe_all_3.jpg" alt="">
+                        <div class="images_right">
+                            <div>
+                                <img src="./images/hp_cafe_all_4.jpg" alt="">
+                            </div>
+                            <div>
+                                <img src="./images/hp_cafe_all_5.jpg" alt="">
+                            </div>
                         </div>
                     </div>
-                    <div class="images_right">
-                        <div>
-                            <img src="./images/hp_cafe_all_4.jpg" alt="">
-                        </div>
-                        <div>
-                            <img src="./images/hp_cafe_all_5.jpg" alt="">
-                        </div>
+                    <div class="wrapper slide">
+                        <a href="">
+                            <div class="btn">
+                                <p class="en">CONTACT</p>
+                                <img src="./images/mail.svg">
+                            </div>
+                        </a>
                     </div>
                 </div>
-                <!-- </div> -->
-                <div class="wrapper slide">
-                    <a href="">
-                        <div class="btn">
-                            <p class="en">CONTACT</p>
-                            <img src="./images/mail.svg">
-                        </div>
-                    </a>
-                </div>
+
             </div>
         </section>
 
@@ -279,6 +281,9 @@
     <script>
         (() => {
             document.addEventListener('DOMContentLoaded', () => {
+                // 下一文追加
+                gsap.registerPlugin(ScrollTrigger);
+
                 const scroll = new LocomotiveScroll({
                     el: document.querySelector('[data-scroll-container]'),
                     direction: 'horizontal',
@@ -295,6 +300,85 @@
                     }
 
                 })
+
+                // ここから追加
+
+                scroll.on("scroll", ScrollTrigger.update);//  scrollがスクロールされた時にスクロールトリガーと更新する（スクロール位置に基づいてアニメーションを更新する）
+
+                ScrollTroger.scrollerProxy('[data-scroll-container]', {//  スクロールトリガーで以下のプロキシを使用する（scrollがonになるとLocomotivescrollがスクロール制御し、elで指定した部分で調整を行うので、そのプロキシをスクロールトリガーでも使用する
+                    scrollLeft(value) {//  要素の1番左からのスクロール位置(value)を取得する
+                        return arguments.length ? scroll.scrollTo(value, 0, 0) : scroll.scroll.instance.scroll.x;//  argument.lengthがtrue(1以上で「ある」)場合、スクロール位置を設定、false(0で「ない」)場合、現在のスクロール位置を取得する
+                    },
+                    getBoundingClientRect() {
+                        return { top: 0, left: 0, width: window.innerWidth, height: window.innerHeight }
+                    },
+                    pinType: document.querySelector('[data-scroll-container]').style.transform ? "transform" : "fixed"
+                })
+                const sections = gsap.utils.toArray('section');//  全てのsection要素を配列に変換してsectionsに代入する
+                sections.forEach(function (section) {//  配列内の各section要素に対して以下の処理を行う
+                    const inner = section.classList.contains('.second_section') ? section.querySelector('.bottom-txt') : section.querySelector('.section-inner');
+                    if (!Section.classList.contains('.verticalscrolling')) {//  垂直方向スクロールでない(水平＝横スクロール)セクションの場合
+                        scrollTrigger.create({
+                            scroller: '[data-scroll-container]',//スクロールコンテナとして指定する
+                            trigger: section,//トリガー要素としてセクションを指定する
+                            // start: section.scrollWidth <= window.innerWidth ? 'top top' : 'bottom bottom',//ウインドウ幅よりセクション幅が小さいときは左端を、セクション幅が大きい時ははみ出るので右端を開始地点とする
+                            start: 'top top',
+                            end: '+=100%',//  セクション開始位置から100％分のスクロール距離
+                            // pin: inner,
+                            // pinSpacing: false,
+                            // pinType: 'transform'
+                        });
+                    } else {//  垂直方向スクロールセクションの場合（＝section自体は横スクロールで、その中のコンテンツsp_allpageのみ縦スクロール）
+                        const verticalscroll = section.querySelector('sp_allpage');
+                        scrollTrigger.create({
+                            // scroller: '[data-scroll-container]',
+                            scroller: '.data-scroll-section',
+                            trigger: section,
+                            direction: vertical,
+                            start: 'center center',
+                            end: () => '+=${section.scrollHight + window.innerWidth}',
+                            // pin: inner,
+                            // pinSpacing: true,
+                            // pinType: 'transform',
+                            anticipatePin: 1
+                        })
+                    } gsap.to(verticalscroll, {
+                        y: () => '${-(section.scrollHight-document.documentElement.clientHeigth)}px',
+                        ease: 'none',
+                        scrollTrigger: {
+                            trigger: verticalscroll,
+                            scroller: '.data-scroll-section',
+                            start: 'center center',
+                            // start: 'top top',
+                            // end: () => '+=${section.scrollHeight}',
+                            end: () => "+=" + document.querySelector(".data-scroll-section").offsetHeight,
+                            scurub: true
+                        }
+                    })
+                })
+                const timeline = gsap.timeline({
+                    scrollTrigger: {
+                        trigger: '.sp_top .img',//固定するもの
+                        scroller: '[data-scroll-container]',
+                        scrub: true,
+                        // start: '50% 50%',
+                        start: 'top top',// セクションのtop(1つ目、セクションの上から50pxだとtop=+50になる)がウインドウのtop(2つ目)に来た時
+                        endTrigger: '.second_section .section-inner',
+                        end: 'right right',
+                        anticipatePin: 1,
+                        pin: true,
+                        pinSpacing: false,
+                        pinType: 'transform'
+                    }
+                });
+
+                ScrollTrigger.addEventListener("refresh", () => Scroll.update());
+
+                ScrollTrigger.refresh();
+
+
+
+
                 const bg = document.querySelector('.bg')
                 const secondSection = document.querySelector('.second_section')
                 const secondSectionX = secondSection.getBoundingClientRect().x
