--- a/portfolio_ideta/index.html
+++ b/portfolio_ideta/index.html
@@ -71,7 +71,12 @@
         </div>
     </header>
     <div class="top_portfolioname">
-        <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.</p>
+        <p class="en">THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.THANKS TO COMING. THIS IS THE
+            <span>IDETA KAORI’S PORTFORIO</span>.THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S
+                PORTFORIO</span>.THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.THANKS TO COMING.
+            THIS IS THE <span>IDETA KAORI’S PORTFORIO</span>.THANKS TO COMING. THIS IS THE <span>IDETA KAORI’S
+                PORTFORIO</span>.
+        </p>
     </div>
     <div class="bg"></div>
 
@@ -311,9 +316,23 @@ https://cdn.jsdelivr.net/npm/locomotive-scroll@4.1.4/dist/locomotive-scroll.min.
                 calculate()
                 window.addEventListener('resize', () => {
                     calculate()
-
-
                 })
+
+                const anchorLinks = document.querySelectorAll('a[href^=\\#]:not([href$=\\#])');
+
+                anchorLinks.forEach((anchorLink) => {
+                    let link = anchorLink.getAttribute('href');
+                    let target = document.querySelector(link);
+
+                    anchorLink.addEventListener('click', (e) => {
+                        e.preventDefault();
+                        e.stopPropagation();
+
+                        scroll.scrollTo(target);
+                    })
+                })
+
+
 
 
             });
