--- a/portfolio_ideta/works_hp_detail.html
+++ b/portfolio_ideta/works_hp_detail.html
@@ -305,7 +305,7 @@
 
                 scroll.on("scroll", ScrollTrigger.update);//  scrollがスクロールされた時にスクロールトリガーと更新する（スクロール位置に基づいてアニメーションを更新する）
 
-                ScrollTroger.scrollerProxy('[data-scroll-container]', {//  スクロールトリガーで以下のプロキシを使用する（scrollがonになるとLocomotivescrollがスクロール制御し、elで指定した部分で調整を行うので、そのプロキシをスクロールトリガーでも使用する
+                ScrollTrigger.scrollerProxy('[data-scroll-container]', {//  スクロールトリガーで以下のプロキシを使用する（scrollがonになるとLocomotivescrollがスクロール制御し、elで指定した部分で調整を行うので、そのプロキシをスクロールトリガーでも使用する
                     scrollLeft(value) {//  要素の1番左からのスクロール位置(value)を取得する
                         return arguments.length ? scroll.scrollTo(value, 0, 0) : scroll.scroll.instance.scroll.x;//  argument.lengthがtrue(1以上で「ある」)場合、スクロール位置を設定、false(0で「ない」)場合、現在のスクロール位置を取得する
                     },
@@ -314,57 +314,74 @@
                     },
                     pinType: document.querySelector('[data-scroll-container]').style.transform ? "transform" : "fixed"
                 })
-                const sections = gsap.utils.toArray('section');//  全てのsection要素を配列に変換してsectionsに代入する
+
+
+                const sections = gsap.utils.toArray('section')//  全てのsection要素を配列に変換してsectionsに代入する
+
                 sections.forEach(function (section) {//  配列内の各section要素に対して以下の処理を行う
+
                     const inner = section.classList.contains('.second_section') ? section.querySelector('.bottom-txt') : section.querySelector('.section-inner');
-                    if (!Section.classList.contains('.verticalscrolling')) {//  垂直方向スクロールでない(水平＝横スクロール)セクションの場合
-                        scrollTrigger.create({
-                            scroller: '[data-scroll-container]',//スクロールコンテナとして指定する
+                    //.second_section(固定要素のあるセクションのクラス名)を持つセクションの場合.bottom-txt(固定要素のセクション内のスクロール部分のクラス名)を、持たない場合は.section-innerを「inner」に代入する
+                    if (!Section.classList.contains('verticalscrolling')) {//  垂直方向スクロールでない(水平＝横スクロール)セクションの場合
+
+                        scrollTrigger.create({//スクロールトリガーを作成する
+
+                            scroller: '[data-scroll-container]',//スクロールコンテナとして全体を指定する
                             trigger: section,//トリガー要素としてセクションを指定する
-                            // start: section.scrollWidth <= window.innerWidth ? 'top top' : 'bottom bottom',//ウインドウ幅よりセクション幅が小さいときは左端を、セクション幅が大きい時ははみ出るので右端を開始地点とする
-                            start: 'top top',
+                            start: section.scrollWidth <= window.innerWidth ? 'top top' : 'bottom bottom',//ウインドウ幅よりセクション幅が小さいときは左端を、セクション幅が大きい時ははみ出るので右端を開始地点とする
+                            // start: 'top top',
                             end: '+=100%',//  セクション開始位置から100％分のスクロール距離
-                            // pin: inner,
-                            // pinSpacing: false,
-                            // pinType: 'transform'
-                        });
+                            pin: inner,//.section-innerを代入する
+                            pinSpacing: false,
+                            pinType: 'transform'
+                        })
+
                     } else {//  垂直方向スクロールセクションの場合（＝section自体は横スクロールで、その中のコンテンツsp_allpageのみ縦スクロール）
                         const verticalscroll = section.querySelector('sp_allpage');
+
                         scrollTrigger.create({
-                            // scroller: '[data-scroll-container]',
-                            scroller: '.data-scroll-section',
+
+                            scroller: '[data-scroll-container]',
                             trigger: section,
                             direction: vertical,
                             start: 'center center',
-                            end: () => '+=${section.scrollHight + window.innerWidth}',
-                            // pin: inner,
-                            // pinSpacing: true,
-                            // pinType: 'transform',
+                            end: () => `+=${section.scrollHight + window.innerWidth}`,
+                            pin: inner,//.section-innerを代入する
+                            pinSpacing: true,
+                            pinType: 'transform',
                             anticipatePin: 1
                         })
-                    } gsap.to(verticalscroll, {
-                        y: () => '${-(section.scrollHight-document.documentElement.clientHeigth)}px',
-                        ease: 'none',
-                        scrollTrigger: {
-                            trigger: verticalscroll,
-                            scroller: '.data-scroll-section',
-                            start: 'center center',
-                            // start: 'top top',
-                            // end: () => '+=${section.scrollHeight}',
-                            end: () => "+=" + document.querySelector(".data-scroll-section").offsetHeight,
-                            scurub: true
-                        }
-                    })
+
+                        gsap.to(verticalscroll, {
+
+                            y: () => `${-(section.scrollHight - document.documentElement.clientHeigth)}px`,
+
+                            ease: 'none',
+
+                            scrollTrigger: {
+
+                                trigger: verticalscroll,
+                                scroller: '[data-scroll-container]',
+                                start: 'center center',
+                                // start: 'top top',
+                                end: () => `+=${section.scrollHeight}`,
+                                // end: () => "+=" + document.querySelector(".data-scroll-section").offsetHeight,
+                                scurub: true
+                            }
+                        });
+                    }
                 })
                 const timeline = gsap.timeline({
+
                     scrollTrigger: {
+
                         trigger: '.sp_top .img',//固定するもの
                         scroller: '[data-scroll-container]',
                         scrub: true,
-                        // start: '50% 50%',
-                        start: 'top top',// セクションのtop(1つ目、セクションの上から50pxだとtop=+50になる)がウインドウのtop(2つ目)に来た時
+                        start: '50% 50%',
+                        // start: 'top top',// セクションのtop(1つ目、セクションの上から50pxだとtop=+50になる)がウインドウのtop(2つ目)に来た時
                         endTrigger: '.second_section .section-inner',
-                        end: 'right right',
+                        end: 'bottom bottom',
                         anticipatePin: 1,
                         pin: true,
                         pinSpacing: false,
